--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "einops>=0.8.1",
     "logging>=0.4.9.6",
+    "matplotlib>=3.10.6",
     "numpy>=2.3.1",
     "opencv-python>=4.11.0.86",
     "rich>=14.0.0",
@@ -32,3 +33,6 @@ explicit = true
 dev = [
     "ruff>=0.12.3",
 ]
+
+[tool.ruff]
+line-length = 100
